--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,25 +1,29 @@
 /* =========================================
    1. Google Font Imports
 ========================================= */
-@import url('https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap&family=Shrikhand&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
 
 /* =========================================
    2. Design Variables
 ========================================= */
 :root {
-  --font-brand: 'Shrikhand', system-ui, -apple-system, sans-serif;
   --font-heading: 'Rubik', system-ui, -apple-system, sans-serif;
   --font-body: 'Courier Prime', system-ui, -apple-system, sans-serif;
-  --primary-colour: rgb(25,115,15);
-  --secondary-colour: rgb(85, 155, 80);
-  --tertiary-colour: rgb(30, 10, 45);
+  --primary-colour: rgba(25, 100, 15);
+  --primary-light-colour: rgb(125, 185, 120);
+  --secondary-colour: rgb(40, 10, 45);
+  --secondary-transparent-colour: rgba(40, 10, 45, 0.5);
+  --secondary-light-colour: rgb(70, 20, 80);
   --accent-colour: rgb(240, 170, 10);
   --background-colour: rgb(255, 250, 240);
-  --xsmall-gap: 0.2rem;
-  --small-gap: 0.4rem;
-  --medium-gap: 0.8rem;
-  --large-gap: 1.6rem;
-  --xlarge-gap: 3.2rem;
+  --xsmall-gap: 0.25rem;
+  --small-gap: 0.5rem;
+  --medium-gap: 0.75rem;
+  --large-gap: 1rem;
+  --xlarge-gap: 1.5rem;
+  --xxlarge-gap: 2rem;
+  --xxxlarge-gap: 2.5rem;
+  --header-height: clamp(72px, 8dvh, 102px);
 }
 
 /* =========================================
@@ -37,8 +41,19 @@
    4. Base Element Styling
 ========================================= */
 html {
+  scroll-behavior: smooth;
   font-size: 100%;
   line-height: 1.5;
+}
+
+h1, h2 {
+  font-family: var(--font-heading);
+  font-weight: 800;
+}
+
+h3, h4, h5, h6 {
+  font-family: var(--font-body);
+  font-weight: 400;
 }
 
 body {
@@ -47,18 +62,13 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
-h1, h2, h3 {
-  font-family: var(--font-heading);
-  font-weight: 800;
-}
-
 @media (min-width: 640px) {
   html {
     font-size: 103%;
   }
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 1025px) {
   html {
     font-size: 107%;
   }
